# python-artifactory

./: pyproject.toml
.github/workflows/: check_code.yml  deploy.yml
pyartifactory/: objects.py
pyartifactory/models/: __init__.py  artifact.py  user.py
tests/: test_artifacts.py  test_groups.py  test_permissions.py  test_repositories.py  test_security.py  test_users.py
