[tool.poetry]
name = "PyArtifactory"
version = "2.0.0rc1"
description = "Typed interactions with the Jfrog Artifactory REST API"
authors = ["Ananias CARVALHO <carvalhoananias@hotmail.com>", "Thomas GAUDIN <thomas.gaudin@centraliens-lille.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/anancarv/python-artifactory"
documentation = "https://github.com/anancarv/python-artifactory"
keywords = ["artifactory"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Typing :: Typed",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Filesystems",
  "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/anancarv/python-artifactory/issues"

[tool.pylint.master]
extension-pkg-whitelist = """
pydantic
"""
ignore = """
tests
"""

[tool.pylint.messages_control]
disable = """
line-too-long,too-few-public-methods,import-error,too-many-instance-attributes, too-many-arguments,
raise-missing-from, invalid-name, too-many-lines
"""

[tool.pylint.basic]
good-names = """
logger,i,j,k,ex,Run,_
"""

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31"
pydantic = {version = "^2.4.2", extras = ["email"]}
typing_extensions = "^4.7.1" 


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
black = "^23.9.1"
pre-commit = "^3.4.0"
responses = "^0.23.3"
pytest-mock = "^3.11.1"
detect-secrets = "^1.4.0"
pytest-cov = "^4.1.0"
pylint = "^3.0.1"
types-requests = "^2.31.0.8"

[build-system]
requires = ["poetry>=1.6.1"]
build-backend = "poetry.masonry.api"
